<resources>
    <string name="app_name">Trackity</string>
    <string name="app_motto">Apna Hisaab-Kitaab</string>
    <string name="name_app">Trackity</string>
    <string name="sp_desc">Track and Manage your expenses\n in a very Minimal way.</string>
    <string name="copyright_desc">© FreeMind Technologies</string>
    <string name="hbn_home">Home</string>
    <string name="hbn_profile">My Profile</string>
    <string name="hbn_calendar">Calendar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fh_logout">Logout</string>
    <string name="fh_header">Let\'s get you started</string>
    <string name="fh_desc1">click on the</string>
    <string name="fh_desc_2">+</string>
    <string name="fh_desc_3">Button.</string>
    <string name="fh_card_header">Start adding your expenses</string>
    <string name="fh_main_header">Expenses</string>
    <string name="fh_demo_amt">5600</string>
    <string name="fh_rupees_symbol">₹</string>
    <string name="fh_card_header0">Click here to add a Expense!</string>
    <string name="fh_all">All</string>
    <string name="ae_Rs">(₹)</string>
    <string name="ae_date_format">(DD, MM YY)</string>
    <string name="ae_add">Save Expense</string>
    <string name="ae_expense_type">Expense Type</string>
    <string name="aed_update">Update</string>
    <string name="aed_delete">Delete</string>
    <string name="met_add_exp_type">Save</string>
    <string name="aed_exp_updated">Expense Updated!</string>
    <string name="aeb_add">Add</string>
    <string name="aeb_expense">Expense</string>
    <string name="aeb_desc_hint">Expense Description</string>
    <string name="aeb_amt">Amount</string>
    <string name="aeb_demo_date">04, Jan 21</string>
    <string name="aeb_demo_time">04:30 pm</string>
    <string name="aeb_exp_head">Expense Heads</string>
    <string name="aeb_subhead_hint">(Select a Expense Head to see its Sub-Heads)</string>
    <string name="aeb_floating_label_txt">Choose Expense Sub-Head</string>
    <string name="expV2_demo_desc">Some Random Desc such as, just trying out the layout of the expense card item</string>
    <string name="expV2_demo_amt">$12500</string>
    <string name="expV2_demo_cat">Electricity/Mobile</string>
    <string name="expV2_emo_date_range">01 - 31</string>
    <string name="exp_type_demo_cat">Something Testing</string>
    <string name="localize_header">Select Your Language</string>
    <string name="localize_en">English</string>
    <string name="localize_hi">Hindi</string>
    <string name="localize_btn_text">Continue</string>
    <string name="localize_disp_text">Welcome</string>
    <string name="localize_alt_disp_txt">Language Changed</string>
    <string name="pf_change_localization">Change Language</string>
    <string name="pf_privacy_policy">Privacy Policy</string>
    <string name="pf_new">New</string>
    <string name="pf_exp_summary">Expense Summary</string>
    <string name="pf_mg_exp_type">Manage Expense Types</string>
    <string name="pf_overview">Overview</string>
    <string name="pf_demo_month_name">January</string>
    <string name="pf_head_month_name">Jan\'s</string>
    <string name="pf_google_signIn">Sign In with Google</string>
    <string name="pf_welcome"> Welcome</string>
    <string name="pf_hi">Hi, </string>
    <string name="pf_expense">Expense</string>
    <string name="pf_jan">January</string>
    <string name="pf_feb">February</string>
    <string name="pf_mar">March</string>
    <string name="pf_apr">April</string>
    <string name="pf_may">May</string>
    <string name="pf_jun">June</string>
    <string name="pf_jul">July</string>
    <string name="pf_aug">August</string>
    <string name="pf_sep">September</string>
    <string name="pf_oct">October</string>
    <string name="pf_nov">November</string>
    <string name="pf_dec">December</string>
    <string name="pf_logout_adb_header">Logout Account</string>
    <string name="pf_logout_adb_desc">Are you sure you want to logout!</string>
    <string name="pf_signing_in">Signing In</string>
    <string name="es_summary">Summary</string>
    <string name="es_choose_exp_head">Choose an Expense Head</string>
    <string name="es_exp_subHead">Expense Sub-Head</string>
    <string name="es_tot_exp">Total Expense</string>
    <string name="esbs_choose_date_range">Choose a date range</string>
    <string name="esbs_search">Search</string>
    <string name="es_no_exp">There are No Expenses in this Sub-Head!</string>
    <string name="met_header">Manage Expense</string>
    <string name="met_post_header">Types</string>
    <string name="met_exp_head">Expense Heads</string>
    <string name="met_subHead_help_text">(Click on the heads to display Sub-heads)</string>
    <string name="met_del_header">Delete Expense Header</string>
    <string name="met_del_desc">Are you sure you want to delete this expense header!</string>
    <string name="met_adb_save">Save</string>
    <string name="met_del_sub_header">Delete Expense Sub-Header</string>
    <string name="met_del_sub_desc">Are you sure you want to delete this expense Sub-Header!</string>
    <string name="met_create_exp_head">Create Expense Header</string>
    <string name="met_create_exp_sub_head">Create Expense Sub-Header</string>
    <string name="she_demo_head">Electricity/Mobile</string>
    <string name="she_exp">Expenses</string>
    <string name="db_sync_header">Syncing Data to Cloud! ...</string>
    <string name="idl_header">Importing Data! ...</string>
    <string name="ea_del_header">Delete Expense</string>
    <string name="ea_del_desc">Are you sure you want to delete this expense!</string>
    <string name="ea_positive_btn_text">Yes</string>
    <string name="ea_negative_btn_text">Cancel</string>
    <string name="util_internet_connected">Internet is Connected</string>
    <string name="util_internet_not_connected">No Internet Connection!</string>
    <string name="util_data_sync_successful">Data Synced Successfully!</string>
    <string name="util_no_data_uploaded_yet">No Data uploaded yet from this Account!</string>
    <string name="ua_update">Update Now</string>
    <string name="ua_header">Update Available</string>
    <string name="ua_demo_v1">(v1.3.1</string>
    <string name="ua_demo_v2"> >> </string>
    <string name="ua_demo_v3">v1.3.2)</string>
    <string name="ua_desc">A new version is available on playstore for this app, kindly update the app in order to benefit from those features, and continue using the app.</string>
    <string name="ppa_header_1">Privacy Policy For Mobile Application</string>
    <string name="ppa_header_2">Effective Date: 08/02/2021</string>
    <string name="ppa_header_3">Applicable To The Following Mobile Application:</string>
    <string name="ppa_app_name">Trackity - Apna Hisaab-Kitaab</string>
    <string name="ppa_pg_1_pt1">The terms "We" / "Us" / "Our"/”Company” individually and collectively refer to FreeMind Technologies and the terms "You" /"Your" / "Yourself" refer to the users.\n\n
    This Privacy Policy is an electronic record in the form of an electronic contract formed under the information Technology Act, 2000 and the rules made thereunder and the amended provisions
        pertaining to electronic documents / records in various statutes as amended by the information Technology Act, 2000. This Privacy Policy does not require any physical, electronic or digital signature.</string>
    <string name="ppa_pg_1_pt2">This Privacy Policy is a legally binding document between you and FreeMind Technologies (both terms defined below). The terms of this Privacy Policy will be effective
        upon your acceptance of the same (directly or indirectly in electronic form, by clicking on the I accept tab or by use of the app or by other means) and will govern the relationship between you
        and FreeMind Technologies for your use of the App “Trackity - Apna Hisaab-Kitaab” (defined below).\n\nThis document is published and shall be construed in accordance with the provisions of the Information Technology
        (reasonable security practices and procedures and sensitive personal data of information) rules, 2011 under Information Technology Act, 2000; that require publishing of the Privacy Policy for
        collection, use, storage and transfer of sensitive personal data or information.</string>
    <string name="ppa_pg_1_pt3">Please read this Privacy Policy carefully by using the App, you indicate that you understand, agree and consent to this Privacy Policy. If you do not agree with the terms
        of this Privacy Policy, please do not use this App.\n\n By providing us your Information or by making use of the facilities provided by the App, you hereby consent to the collection, storage, processing
        and transfer of any or all of Your Personal Information and Non-Personal Information by us as specified under this Privacy Policy. You further agree that such collection, use, storage and transfer of
        Your Information shall not cause any loss or wrongful gain to you or any other person.</string>
    <string name="ppa_pg_2_heading_1">Article 1 - DEFINITIONS:</string>
    <string name="ppa_pg_2_pt1">a) APPLICABLE MOBILE APPLICATION: This Privacy Policy will refer to and be applicable to the Mobile App listed above, which shall hereinafter be referred to as "Mobile App."\n\n
    b) EFFECTIVE DATE: "Effective Date" means the date this Privacy Policy comes into force and effect.\n\n
    c) PARTIES: The parties to this privacy policy are the following data controller: FreeMind Technologies ("Data Controller") and you, as the user of this Mobile App. Hereinafter, the parties will individually
        be referred to as "Party" and collectively as "Parties".\n\n d) DATA CONTROLLER: Data Controller is the publisher, owner, and operator of the Mobile App and is the Party responsible for the collection of
        information described herein. Data Controller shall be referred to either by Data Controller\'s name or "Data Controller," as listed above. If Data Controller or Data Controller\'s property shall be referred
        to through first-person pronouns, it shall be through the use of the following: us, we, our, ours, etc.\n\n e) YOU: Should you agree to this Privacy Policy and continue your use of the Mobile App, you will be
        referred to herein as either you, the user, or if any second-person pronouns are required and applicable, such pronouns as "your", "yours", etc.\n\n f) PERSONAL DATA: "Personal DATA" means personal data and information that we obtain from you in connection with your use of the Mobile App which is capable of identifying you in any
        manner.</string>
    <string name="ppa_pg_2_heading_2">Article 2 - GENERAL INFORMATION:</string>
    <string name="ppa_pg_2_pt2">This privacy policy (hereinafter "Privacy Policy") describes how we collect and use the Personal Data that we receive about you, as well as your rights in relation to that Personal Data,
        when you visit our Mobile App or purchase our Goods.\n\n This Privacy Policy does not cover any information that we may receive about you through sources other than the use of our Mobile App. The Mobile App may
        link out to other websites or mobile applications, but this Privacy Policy does not and will not apply to any of those linked websites or applications.\n\n We are committed to the protection of your privacy while
        you use our Mobile App.\n\n By continuing to use our Mobile App, you acknowledge that you have had the chance to review and consider this Privacy Policy, and you acknowledge that you agree to it. This means that
        you also consent to the use of your information and the method of disclosure as described in this Privacy Policy. If you do not understand the Privacy Policy or do not agree to it then you agree to immediately
        cease your use of our Mobile App.</string>
</resources>